force-app/main/default/objects/Magic_Mass_Loader_Configuration__mdt/Magic_Mass_Loader_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>Magic Mass Loader Configuration</label>
    <pluralLabel>Magic Mass Loader Configurations</pluralLabel>
</CustomObject>