force-app/main/default/objects/Magic_Mass_Loader_Configuration__mdt/fields/Magic_Mass_Loader_Object__c.field-meta.xml
<CustomField>
    <fullName>Magic_Mass_Loader_Object__c</fullName>
    <label>Magic Mass Loader Object</label>
    <referenceTo>Magic_Mass_Loader_Object__mdt</referenceTo>
    <relationshipLabel>Magic Mass Loader Configurations</relationshipLabel>
    <relationshipName>Magic_Mass_Loader_Configurations</relationshipName>
    <required>true</required>
    <type>MetadataRelationship</type>
</CustomField>