force-app/main/default/objects/Magic_Mass_Loader_Configuration__mdt/fields/Modes_Allowed__c.field-meta.xml
<CustomField>
    <fullName>Modes_Allowed__c</fullName>
    <label>Modes Allowed</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Synchronous</fullName>
                <default>true</default>
                <label>Synchronous</label>
            </value>
            <value>
                <fullName>Asynchronous</fullName>
            </value>
            <value>
                <fullName>Sync/Async</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>